test/compile_error/missing_version_test.exs
defmodule ApicalTest.CompileError.MissingVersionTest do
  use ExUnit.Case, async: true

  test "this"
end
